samples/_failures_safe/1761471441_08d0e4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_49e55b3b.c: In function ‘main’:
./samples/SAFE/__tmp_49e55b3b.c:158:17: error: expected declaration or statement at end of input
  158 |                 if (status == 1) {
      |                 ^~
./samples/SAFE/__tmp_49e55b3b.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_49e55b3b.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_49e55b3b.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_49e55b3b.c:158:17: error: expected declaration or statement at end of input
